--- a/AzureADOauthDemoStandardWeb/packages.config
+++ b/AzureADOauthDemoStandardWeb/packages.config
@@ -1,41 +1,69 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Antlr" version="3.4.1.9004" targetFramework="net47" />
-  <package id="bootstrap" version="3.0.0" targetFramework="net47" />
-  <package id="EntityFramework" version="6.1.3" targetFramework="net47" />
-  <package id="jQuery" version="1.10.2" targetFramework="net47" />
-  <package id="jQuery.Validation" version="1.11.1" targetFramework="net47" />
-  <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net47" />
-  <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.0.6" targetFramework="net47" />
-  <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.2.0" targetFramework="net47" />
-  <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.2.0" targetFramework="net47" />
-  <package id="Microsoft.ApplicationInsights.Web" version="2.2.0" targetFramework="net47" />
-  <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.2.0" targetFramework="net47" />
-  <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.2.0" targetFramework="net47" />
-  <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net47" />
-  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net47" />
+  <package id="Antlr" version="3.5.0.2" targetFramework="net48" />
+  <package id="bootstrap" version="5.2.3" targetFramework="net48" />
+  <package id="EntityFramework" version="6.4.4" targetFramework="net48" />
+  <package id="jQuery" version="3.6.3" targetFramework="net48" />
+  <package id="jQuery.Validation" version="1.19.5" targetFramework="net48" />
+  <package id="Microsoft.ApplicationInsights" version="2.21.0" targetFramework="net48" />
+  <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.4.0" targetFramework="net48" />
+  <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.21.0" targetFramework="net48" />
+  <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.21.0" targetFramework="net48" />
+  <package id="Microsoft.ApplicationInsights.Web" version="2.21.0" targetFramework="net48" />
+  <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.21.0" targetFramework="net48" />
+  <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.21.0" targetFramework="net48" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.9" targetFramework="net48" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.9" targetFramework="net48" />
+  <package id="Microsoft.AspNet.TelemetryCorrelation" version="1.0.8" targetFramework="net48" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net47" />
-  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net47" />
-  <package id="Microsoft.Azure.ActiveDirectory.GraphClient" version="2.0.2" targetFramework="net47" />
-  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.8" targetFramework="net47" />
-  <package id="Microsoft.Data.Edm" version="5.6.3" targetFramework="net47" />
-  <package id="Microsoft.Data.OData" version="5.6.3" targetFramework="net47" />
-  <package id="Microsoft.Data.Services.Client" version="5.6.3" targetFramework="net47" />
-  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="2.14.201151115" targetFramework="net47" />
-  <package id="Microsoft.IdentityModel.Protocol.Extensions" version="1.0.0" targetFramework="net47" />
-  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net47" />
-  <package id="Microsoft.Net.Compilers" version="2.4.0" targetFramework="net47" developmentDependency="true" />
-  <package id="Microsoft.Owin" version="3.0.1" targetFramework="net47" />
-  <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net47" />
-  <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net47" />
-  <package id="Microsoft.Owin.Security.Cookies" version="3.0.1" targetFramework="net47" />
-  <package id="Microsoft.Owin.Security.OpenIdConnect" version="3.0.1" targetFramework="net47" />
-  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net47" />
-  <package id="Modernizr" version="2.6.2" targetFramework="net47" />
-  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net47" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.9" targetFramework="net48" />
+  <package id="Microsoft.Azure.ActiveDirectory.GraphClient" version="2.1.1" targetFramework="net48" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net48" />
+  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="3.6.0" targetFramework="net48" />
+  <package id="Microsoft.Data.Edm" version="5.8.5" targetFramework="net48" />
+  <package id="Microsoft.Data.OData" version="5.8.5" targetFramework="net48" />
+  <package id="Microsoft.Data.Services.Client" version="5.8.5" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Abstractions" version="6.27.0" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="5.3.0" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="6.27.0" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Logging" version="6.27.0" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Protocol.Extensions" version="1.0.4.403061554" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Protocols" version="5.3.0" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="5.3.0" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Tokens" version="6.27.0" targetFramework="net48" />
+  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="4.0.0" targetFramework="net48" />
+  <package id="Microsoft.Net.Compilers" version="4.2.0" targetFramework="net48" developmentDependency="true" />
+  <package id="Microsoft.NETCore.Platforms" version="1.1.1" targetFramework="net48" />
+  <package id="Microsoft.NETCore.Targets" version="1.1.3" targetFramework="net48" />
+  <package id="Microsoft.Owin" version="4.2.2" targetFramework="net48" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="4.2.2" targetFramework="net48" />
+  <package id="Microsoft.Owin.Security" version="4.2.2" targetFramework="net48" />
+  <package id="Microsoft.Owin.Security.Cookies" version="4.2.2" targetFramework="net48" />
+  <package id="Microsoft.Owin.Security.OpenIdConnect" version="4.2.2" targetFramework="net48" />
+  <package id="Microsoft.Web.Infrastructure" version="2.0.0" targetFramework="net48" />
+  <package id="Modernizr" version="2.8.3" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="13.0.2" targetFramework="net48" />
   <package id="Owin" version="1.0" targetFramework="net47" />
-  <package id="Respond" version="1.2.0" targetFramework="net47" />
-  <package id="System.IdentityModel.Tokens.Jwt" version="4.0.0" targetFramework="net47" />
-  <package id="System.Spatial" version="5.6.3" targetFramework="net47" />
-  <package id="WebGrease" version="1.5.2" targetFramework="net47" />
+  <package id="Respond" version="1.4.2" targetFramework="net48" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
+  <package id="System.Diagnostics.DiagnosticSource" version="5.0.0" targetFramework="net48" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="6.27.0" targetFramework="net48" />
+  <package id="System.IO" version="4.3.0" targetFramework="net48" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net48" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
+  <package id="System.Private.Uri" version="4.3.2" targetFramework="net48" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net48" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net48" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net48" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net48" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net48" />
+  <package id="System.Spatial" version="5.8.5" targetFramework="net48" />
+  <package id="System.Text.Encoding" version="4.3.0" targetFramework="net48" />
+  <package id="System.Text.Encodings.Web" version="4.7.2" targetFramework="net48" />
+  <package id="System.Text.Json" version="4.7.2" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
+  <package id="WebGrease" version="1.6.0" targetFramework="net48" />
 </packages>
